--- a/font/font.css
+++ b/font/font.css
@@ -27,26 +27,14 @@
     src:url(niramit/Niramit-Bold.ttf);
 }
 @font-face {
-    font-family: Seasons;
-    src:url(seasons/The Seasons Regular.ttf);
+    font-family: Ashfiana;
+    src:url(ashfiana/Ashfiana Oblique.ttf);
 }
 @font-face {
-    font-family: Seasons-Light;
-    src:url(seasons/The Seasons Light.ttf);
+    font-family: Chatara;
+    src:url(chatara/Chatara.ttf);
 }
 @font-face {
-    font-family: Seasons-Light-Italic;
-    src:url(seasons/The Seasons Light Italic.ttf);
-}
-@font-face {
-    font-family: Seasons-Italic;
-    src:url(seasons/The Seasons Italic.ttf);
-}
-@font-face {
-    font-family: Seasons-Bold;
-    src:url(seasons/The Seasons Bold.ttf);
-}
-@font-face {
-    font-family: Seasons-Bold-Italic;
-    src:url(seasons/The Seasons Bold Italic.ttf);
+    font-family: Elegist;
+    src:url(elegist/Elegist.otf);
 }
